--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1314,3 +1314,85 @@ a {
 .cid-tJS6uM4N87 .mbr-section-btn {
   color: #000000;
 }
+.cid-tNro7P3k4T {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #edefeb;
+}
+.cid-tNro7P3k4T .mbr-media {
+  position: relative;
+}
+.cid-tNro7P3k4T .mbr-media img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-tNro7P3k4T a:hover {
+  background-image: none !important;
+}
+.cid-tNro7P3k4T .icon-wrap {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+}
+.cid-tNro7P3k4T .mbr-media span {
+  font-size: 5rem;
+  transition: all 0.2s;
+}
+.cid-tNro7P3k4T .modalWindow {
+  position: fixed;
+  z-index: 5000;
+  left: 0;
+  top: 0;
+  background-color: rgba(61, 61, 61, 0.65);
+  width: 100%;
+  height: 100%;
+}
+.cid-tNro7P3k4T .modalWindow .modalWindow-container {
+  display: table-cell;
+  vertical-align: middle;
+}
+.cid-tNro7P3k4T .modalWindow .modalWindow-video {
+  height: calc(44.9943757vw);
+  width: 80vw;
+  margin: 0 auto;
+}
+.cid-tNro7P3k4T .close {
+  position: fixed;
+  opacity: 0.5;
+  font-size: 1.5rem;
+  font-weight: 300;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  color: #fff;
+  top: 2.5rem;
+  right: 2.5rem;
+  border: 2px solid #fff;
+  text-shadow: none;
+  z-index: 5;
+  transition: opacity 0.3s ease;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+.cid-tNro7P3k4T .close:hover {
+  opacity: 1;
+  background: #000;
+  color: #fff;
+}
+.cid-tNro7P3k4T .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tNro7P3k4T .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tNro7P3k4T .content-head {
+  max-width: 800px;
+}
