--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -773,7 +773,6 @@ a {
 .cid-tJS6tZXiPa .navbar-nav {
   margin: auto;
   margin-left: 0;
-  margin-left: auto;
 }
 .cid-tJS6tZXiPa .navbar-nav .nav-item {
   padding: 0 !important;
@@ -1394,5 +1393,40 @@ a {
   top: 0;
 }
 .cid-tNro7P3k4T .content-head {
+  max-width: 800px;
+}
+.cid-tNrEif7V2r {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-tNrEif7V2r .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tNrEif7V2r .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tNrEif7V2r .item-wrapper {
+  display: flex;
+  margin-bottom: 2rem;
+  border-radius: 0 !important;
+}
+@media (max-width: 767px) {
+  .cid-tNrEif7V2r .item-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-tNrEif7V2r .mbr-iconfont {
+  font-size: 3rem;
+  color: #2e481a;
+  padding-right: 2rem;
+}
+.cid-tNrEif7V2r .content-head {
   max-width: 800px;
 }
